src/test/deca/context/invalid/divide.deca
//Test pour division

//Resultat: invalid type for arithmetique operation for string

{
    int x = 0;
    string y;
    x/y ; 
}